# temporal-infra-provisioning-demo

./: .gitignore  Dockerfile  README.md  __init__.py  activities.py  cleanup.py  client.key  client.pem  codec.py  codec_server.py  create_workflow.py  destroy_workflow.py  destroyer.py  gitignore  pyproject.toml  requirements.txt  runner.py  scheduler.py  setcloudenv.example  shared.py  starter.py  terraform.tfstate  web_server.py  worker.py  workflows.py
experimental/: experimental_worker.py
infra_provisioner/: __init__.py  main.py
metrics/: README.md  docker-compose.yaml
metrics/dashboards/: sdk-general.json
metrics/prometheus/: prometheus.yml
shared/: activities.py  base.py  codec.py  codec_server.py  tf_runner.py
static/: index.css  index.js
templates/: base.html  index.html  provision_infra.html  provisioned.html  provisioning.html
terraform/: .terraform.lock.hcl  README.md  main.tf  outputs.tf  secrets.sh  terraform.tfstate  terraform.tfstate.backup  terraform.tfvars  variables.tf
terraform/happy_path/: main.tf
terraform/human_in_the_loop/: .terraform.lock.hcl  README.md  outputs.tf
terraform/minikube_kuard/: main.tf  outputs.tf
terraform/tcloud/: main.tf  outputs.tf  variables.tf
terraform/tcloud_admin_user/: main.tf  outputs.tf  terraform.tfvars.example
terraform/tcloud_namespace/: README.md  main.tf  variables.tf
tests/: test_deprovision_workflow_mocked.py  test_provision_workflow_mocked.py
ui/: app.py  codec.py  temporal_client.py
ui/templates/: index.html
web/: __init__.py  main.py
workflows/: apply.py  destroy.py
(+2 files in other folders)
