[tool.poetry]
name = "temporal_infra_provisioning_demo"
version = "0.1.0"
description = ""
authors = ["Neil Dahlke <neil.dahlke@temporal.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
temporalio = "^1.6.0"
cramjam = "^2.8.3"
docopt = "^0.6.2"
aiohttp = "^3.8.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
